add dns ui page
